--- a/index.html
+++ b/index.html
@@ -1,172 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio Animado</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sebastián Barbosa | Portafolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #0e0e0e;
-      color: #fff;
-      line-height: 1.6;
+      font-family: 'Poppins', sans-serif;
+      background-color: #0E0E0E;
+      color: white;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    header {
-      background: linear-gradient(120deg, #1f1c2c, #928dab);
-      padding: 4rem 2rem;
+    .split-screen {
+      display: flex;
+      height: 100vh;
+    }
+
+    .split {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: 0.6s ease;
+      padding: 2rem;
       text-align: center;
-      animation: fadeIn 2s ease-out forwards;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      color: #ddd;
-    }
-
-    section {
-      padding: 4rem 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      border-left: 4px solid #ff4d4d;
-      padding-left: 10px;
-      animation: slideInLeft 1s ease-out forwards;
-    }
-
-    .skills, .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .card {
-      background: #1f1f1f;
-      padding: 1.5rem;
-      border-radius: 10px;
-      transition: transform 0.3s ease, background 0.3s;
       cursor: pointer;
     }
 
-    .card:hover {
-      transform: scale(1.05);
-      background: #292929;
+    .left {
+      background: linear-gradient(135deg, #1f1c2c, #928dab);
+    }
+
+    .right {
+      background: linear-gradient(135deg, #16222a, #3a6073);
+    }
+
+    .split:hover {
+      transform: scale(1.03);
+    }
+
+    .split h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .split p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+      color: #e0e0e0;
     }
 
     .btn {
-      display: inline-block;
-      background: #ff4d4d;
-      color: #fff;
-      padding: 0.7rem 1.5rem;
-      border-radius: 30px;
+      padding: 0.8rem 1.8rem;
+      background-color: rgba(255, 255, 255, 0.1);
+      border: 1px solid #fff;
+      color: white;
       text-decoration: none;
-      transition: background 0.3s, transform 0.3s;
+      font-weight: 600;
+      border-radius: 30px;
+      transition: all 0.3s ease;
     }
 
     .btn:hover {
-      background: #ff1a1a;
-      transform: translateY(-3px);
+      background-color: white;
+      color: #000;
     }
 
-    footer {
-      background: #1f1f1f;
-      text-align: center;
-      padding: 2rem;
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #999;
-    }
-
-    /* Animaciones */
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-30px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes slideInLeft {
-      0% { opacity: 0; transform: translateX(-50px); }
-      100% { opacity: 1; transform: translateX(0); }
-    }
-
-    .fade-up {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 1s ease-out;
-    }
-
-    .fade-up.visible {
-      opacity: 1;
-      transform: translateY(0);
+    @media (max-width: 768px) {
+      .split-screen {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Sebastián Barbosa</h1>
-  <p>Desarrollador de videojuegos & Diseñador técnico</p>
-</header>
-
-<section class="fade-up">
-  <h2>Habilidades</h2>
-  <div class="skills">
-    <div class="card">Unity 2D/3D</div>
-    <div class="card">Unreal Engine 5</div>
-    <div class="card">C# y C++</div>
-    <div class="card">Diseño de UI/UX</div>
+<div class="split-screen">
+  <div class="split left" onclick="location.href='#diseno'">
+    <h1>Diseño Gráfico</h1>
+    <p>Ilustración, branding, interfaces, piezas visuales y creatividad visual.</p>
+    <a class="btn" href="#diseno">Ver más</a>
   </div>
-</section>
-
-<section class="fade-up">
-  <h2>Proyectos</h2>
-  <div class="projects">
-    <div class="card">👾 Juego Metroidvania</div>
-    <div class="card">🎮 Puzzle Árbol Binario</div>
-    <div class="card">🧠 Sistema de FSM IA</div>
+  <div class="split right" onclick="location.href='#dev'">
+    <h1>Desarrollo de Videojuegos</h1>
+    <p>Gameplay, inteligencia artificial, motores como Unity y Unreal Engine.</p>
+    <a class="btn" href="#dev">Ver más</a>
   </div>
-</section>
-
-<section class="fade-up">
-  <h2>Contacto</h2>
-  <p>¿Querés trabajar conmigo? Escribime a:</p>
-  <a href="mailto:sebastian@email.com" class="btn">Enviar email</a>
-</section>
-
-<footer>
-  &copy; 2025 Sebastián Barbosa – Todos los derechos reservados
-</footer>
-
-<script>
-  // Animación al hacer scroll
-  const fadeUps = document.querySelectorAll('.fade-up');
-
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('visible');
-      }
-    });
-  }, {
-    threshold: 0.2
-  });
-
-  fadeUps.forEach(el => observer.observe(el));
-</script>
+</div>
 
 </body>
 </html>
+
