bases de las pagina web

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sebastián Barbosa | Portafolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
@@ -86,15 +86,15 @@
 <body>
 
 <div class="split-screen">
-  <div class="split left" onclick="location.href='#diseno'">
+  <div class="split left">
     <h1>Diseño Gráfico</h1>
     <p>Ilustración, branding, interfaces, piezas visuales y creatividad visual.</p>
-    <a class="btn" href="#diseno">Ver más</a>
+    <a class="btn" href="diseno.html">Ver más</a>
   </div>
-  <div class="split right" onclick="location.href='#dev'">
+  <div class="split right">
     <h1>Desarrollo de Videojuegos</h1>
     <p>Gameplay, inteligencia artificial, motores como Unity y Unreal Engine.</p>
-    <a class="btn" href="#dev">Ver más</a>
+    <a class="btn" href="juegos.html">Ver más</a>
   </div>
 </div>
 
