--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects 🎮</a>
                 <a href="#contact" class="btn btn-secondary">Contact 📧</a>
-                <a href="https://github.com/Sebarbosa10/mi-portafolio/raw/main/Assets/CV/Sebastian_Barbosa_CV.pdf" download="Sebastian_Barbosa_CV.pdf" class="btn btn-secondary">Download CV 📄</a>
+                <a href="assets/cv/Sebastian_Barbosa_CV.pdf" download="Sebastian_Barbosa_CV.pdf" class="btn btn-secondary">Download CV 📄</a>
             </div>
         </div>
         <div class="hero-visual">
