--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects 🎮</a>
                 <a href="#contact" class="btn btn-secondary">Contact 📧</a>
-                <a href="assets/cv/Sebastian_Barbosa_CV.pdf" download="Sebastian_Barbosa_CV.pdf" class="btn btn-secondary">Download CV 📄</a>
+                <a href="https://drive.google.com/uc?export=download&id=10R_UWb9_zg_NVb_M7AvfhvzyjSROuxVr" target="_blank" class="btn btn-secondary">Download CV 📄</a>
             </div>
         </div>
         <div class="hero-visual">
@@ -750,17 +750,17 @@
             <div class="project-card">
                 <div class="project-image">🎮</div>
                 <div class="project-content">
-                    <h3>3D Capstone Project</h3>
-                    <p>3D game developed in Unity as a final degree project. Implementation of gameplay mechanics, AI systems, and performance optimization.</p>
+                    <h3>Aedopolis</h3>
+                    <p>First published game developed over a year using Unity 3D. Role as 3D Artist creating models and textures with PS1-era aesthetic. Collaborated with team to deliver complete gaming experience on itch.io.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">Unity</span>
-                        <span class="tech-tag">C#</span>
-                        <span class="tech-tag">3D</span>
-                        <span class="tech-tag">AI</span>
+                        <span class="tech-tag">Unity 3D</span>
+                        <span class="tech-tag">3D Modeling</span>
+                        <span class="tech-tag">Texturing</span>
+                        <span class="tech-tag">PS1 Aesthetic</span>
                     </div>
                     <div class="project-buttons">
-                        <a href="path/to/project1/build.zip" download="Capstone_Project_Build.zip" class="btn-download">📥 Download Build</a>
-                        <a href="#" class="btn-demo">▶️ Play Demo</a>
+                        <a href="https://smartmonkeys.itch.io/aedopolis" target="_blank" class="btn-download">🎮 Play on itch.io</a>
+                        <a href="https://smartmonkeys.itch.io/aedopolis" target="_blank" class="btn-demo">👁️ View Page</a>
                     </div>
                 </div>
             </div>
@@ -768,16 +768,17 @@
             <div class="project-card">
                 <div class="project-image">🔷</div>
                 <div class="project-content">
-                    <h3>Unreal Engine 5 Prototype</h3>
-                    <p>Experimentation with Blueprints and gameplay systems in UE5. Implementation of interactive mechanics and particle systems.</p>
+                    <h3>Unreal Engine 5 - AI Project</h3>
+                    <p>Academic project developed in Unreal Engine featuring AI implementation with Behavior Trees, Blueprint coding, and custom level design. Demonstrates advanced AI behaviors and environmental interaction systems.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Unreal Engine 5</span>
                         <span class="tech-tag">Blueprints</span>
-                        <span class="tech-tag">C++</span>
+                        <span class="tech-tag">Behavior Trees</span>
+                        <span class="tech-tag">Level Design</span>
                     </div>
                     <div class="project-buttons">
-                        <a href="path/to/project2/build.zip" download="UE5_Prototype_Build.zip" class="btn-download">📥 Download Build</a>
-                        <a href="#" class="btn-demo">▶️ Play Demo</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1dOHMtFwhtX4kJMGtbIDD5l9qjpQaSztE" target="_blank" class="btn-download">📥 Download Build</a>
+                        <a href="https://drive.google.com/file/d/1dOHMtFwhtX4kJMGtbIDD5l9qjpQaSztE/view" target="_blank" class="btn-demo">👁️ View Details</a>
                     </div>
                 </div>
             </div>
@@ -785,16 +786,18 @@
             <div class="project-card">
                 <div class="project-image">🤖</div>
                 <div class="project-content">
-                    <h3>AI System for Gameplay</h3>
-                    <p>Development of AI behaviors for NPCs, implementing design patterns and advanced scripting logic.</p>
+                    <h3>AI Programming - FSM & Line of Sight</h3>
+                    <p>Academic project for Artificial Intelligence Programming course. Implemented Finite State Machine (FSM) and Line of Sight system for intelligent enemy behavior and player detection mechanics.</p>
                     <div class="project-tech">
+                        <span class="tech-tag">Unity</span>
                         <span class="tech-tag">C#</span>
+                        <span class="tech-tag">FSM</span>
+                        <span class="tech-tag">Line of Sight</span>
                         <span class="tech-tag">AI</span>
-                        <span class="tech-tag">Design Patterns</span>
                     </div>
                     <div class="project-buttons">
-                        <a href="path/to/project3/build.zip" download="AI_System_Build.zip" class="btn-download">📥 Download Build</a>
-                        <a href="#" class="btn-demo">▶️ View Code</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1KyGBW2YJNEib8BMbqIqk9YxnuRR-20hP" target="_blank" class="btn-download">📥 Download Build</a>
+                        <a href="https://drive.google.com/file/d/1KyGBW2YJNEib8BMbqIqk9YxnuRR-20hP/view" target="_blank" class="btn-demo">👁️ View Details</a>
                     </div>
                 </div>
             </div>
