--- a/index.html
+++ b/index.html
@@ -801,6 +801,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card">
+                <div class="project-image">🃏</div>
+                <div class="project-content">
+                    <h3>Card Combat Game with Live Action Cinematics</h3>
+                    <p>Innovative team project combining card-based combat with live-action cinematics filmed and produced by the team. Developed the turn-based system and card combat mechanics as lead programmer.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Unity</span>
+                        <span class="tech-tag">C#</span>
+                        <span class="tech-tag">Turn-Based System</span>
+                        <span class="tech-tag">Card Mechanics</span>
+                        <span class="tech-tag">Live Action</span>
+                    </div>
+                    <div class="project-buttons">
+                        <a href="https://drive.google.com/uc?export=download&id=1kyPi_Lwt4QwQbTaTlM7zSggs2SlM9A45" target="_blank" class="btn-download">📥 Download Build</a>
+                        <a href="https://drive.google.com/file/d/1kyPi_Lwt4QwQbTaTlM7zSggs2SlM9A45/view" target="_blank" class="btn-demo">👁️ View Details</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
