--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://drive.google.com/uc?export=view&id=1xklekCVUQzemeukUZWjLEQf-ZQIkKJdH" alt="Aedopolis Screenshot">
+                    <img src="assets/images/aedopolis.jpg" alt="Aedopolis Screenshot">
                 </div>
                 <div class="project-content">
                     <h3>Aedopolis</h3>
@@ -780,7 +780,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://drive.google.com/uc?export=view&id=11lAJ6mqeV3I3CwbIGIR442Z120F86sSe" alt="Unreal Engine AI Project Screenshot">
+                    <img src="assets/images/unreal-ai.jpg" alt="Unreal Engine AI Project Screenshot">
                 </div>
                 <div class="project-content">
                     <h3>Unreal Engine 5 - AI Project</h3>
@@ -800,7 +800,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://drive.google.com/uc?export=view&id=1xklekCVUQzemeukUZWjLEQf-ZQIkKJdH" alt="AI FSM Project Screenshot">
+                    <img src="assets/images/fsm-project.jpg" alt="AI FSM Project Screenshot">
                 </div>
                 <div class="project-content">
                     <h3>AI Programming - FSM & Line of Sight</h3>
@@ -821,7 +821,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://drive.google.com/uc?export=view&id=1GGJ8kg1VlR92Q_OcXY8xmbrV_-VN-5_G" alt="Card Combat Game Screenshot">
+                    <img src="assets/images/card-game.jpg" alt="Card Combat Game Screenshot">
                 </div>
                 <div class="project-content">
                     <h3>Card Combat Game with Live Action Cinematics</h3>
