--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             <p>Passionate Video Game Development student with hands-on experience in Unity and Unreal Engine 5. Focused on gameplay programming, AI integration, and system optimization.</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects 🎮</a>
-                <a href="#contact" class="btn btn-secondary">Contact 📧</a>
+                <a href="https://github.com/Sebarbosa10" target="_blank" class="btn btn-secondary">GitHub 💻</a>
                 <a href="https://drive.google.com/uc?export=download&id=10R_UWb9_zg_NVb_M7AvfhvzyjSROuxVr" target="_blank" class="btn btn-secondary">Download CV 📄</a>
             </div>
         </div>
@@ -773,7 +773,6 @@
                     </div>
                     <div class="project-buttons">
                         <a href="https://smartmonkeys.itch.io/aedopolis" target="_blank" class="btn-download">🎮 Play on itch.io</a>
-                        <a href="https://smartmonkeys.itch.io/aedopolis" target="_blank" class="btn-demo">👁️ View Page</a>
                     </div>
                 </div>
             </div>
@@ -793,7 +792,6 @@
                     </div>
                     <div class="project-buttons">
                         <a href="https://drive.google.com/uc?export=download&id=1dOHMtFwhtX4kJMGtbIDD5l9qjpQaSztE" target="_blank" class="btn-download">📥 Download Build</a>
-                        <a href="https://drive.google.com/file/d/1dOHMtFwhtX4kJMGtbIDD5l9qjpQaSztE/view" target="_blank" class="btn-demo">👁️ View Details</a>
                     </div>
                 </div>
             </div>
@@ -814,7 +812,6 @@
                     </div>
                     <div class="project-buttons">
                         <a href="https://drive.google.com/uc?export=download&id=1KyGBW2YJNEib8BMbqIqk9YxnuRR-20hP" target="_blank" class="btn-download">📥 Download Build</a>
-                        <a href="https://drive.google.com/file/d/1KyGBW2YJNEib8BMbqIqk9YxnuRR-20hP/view" target="_blank" class="btn-demo">👁️ View Details</a>
                     </div>
                 </div>
             </div>
@@ -835,7 +832,6 @@
                     </div>
                     <div class="project-buttons">
                         <a href="https://drive.google.com/uc?export=download&id=1kyPi_Lwt4QwQbTaTlM7zSggs2SlM9A45" target="_blank" class="btn-download">📥 Download Build</a>
-                        <a href="https://drive.google.com/file/d/1kyPi_Lwt4QwQbTaTlM7zSggs2SlM9A45/view" target="_blank" class="btn-demo">👁️ View Details</a>
                     </div>
                 </div>
             </div>
