--- a/index.html
+++ b/index.html
@@ -263,43 +263,59 @@
 
         /* About Section */
         .about-content {
+            display: flex;
+            flex-direction: column;
+            gap: 3rem;
+        }
+
+        .about-intro {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .about-intro h3 {
+            font-size: 1.8rem;
+            margin-bottom: 1.5rem;
+            color: #5865f2;
+        }
+
+        .about-intro p {
+            font-size: 1.05rem;
+            color: #b0b0b0;
+            line-height: 1.9;
+            margin-bottom: 1rem;
+        }
+
+        .about-columns {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 3rem;
-            align-items: start;
-        }
-
-        .about-text h3 {
-            font-size: 1.6rem;
-            margin-bottom: 1.2rem;
-            color: #5865f2;
-            text-align: left;
-        }
-
-        .about-text p {
-            margin-bottom: 1.2rem;
-            font-size: 1rem;
-            color: #b0b0b0;
-            line-height: 1.8;
-            text-align: left;
+            gap: 2.5rem;
         }
 
         .tech-stack {
-            margin-top: 1.5rem;
+            background: rgba(88, 101, 242, 0.05);
+            padding: 2rem;
+            border-radius: 12px;
+            border: 1px solid rgba(88, 101, 242, 0.2);
         }
 
         .tech-stack h4 {
             color: #ff4757;
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
-            text-align: left;
+            margin-bottom: 1.2rem;
+            font-size: 1.2rem;
+            text-align: center;
         }
 
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 0.8rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .skills-grid:last-child {
+            margin-bottom: 0;
         }
 
         .skill-card {
@@ -325,7 +341,7 @@
 
         .experience-section {
             background: rgba(88, 101, 242, 0.05);
-            padding: 1.5rem;
+            padding: 2rem;
             border-radius: 12px;
             border: 1px solid rgba(88, 101, 242, 0.2);
         }
@@ -333,18 +349,26 @@
         .experience-section h3 {
             color: #ff4757;
             margin-bottom: 1.5rem;
-            font-size: 1.3rem;
-            text-align: left;
+            font-size: 1.2rem;
+            text-align: center;
         }
 
         .experience-item {
             margin-bottom: 1.5rem;
+            padding-bottom: 1.5rem;
+            border-bottom: 1px solid rgba(88, 101, 242, 0.15);
             text-align: left;
+        }
+
+        .experience-item:last-of-type {
+            margin-bottom: 0;
+            padding-bottom: 0;
+            border-bottom: none;
         }
 
         .experience-item h4 {
             color: #5865f2;
-            font-size: 1.1rem;
+            font-size: 1.05rem;
             margin-bottom: 0.3rem;
         }
 
@@ -369,7 +393,9 @@
 
         .languages-section {
             margin-top: 1.5rem;
-            text-align: left;
+            padding-top: 1.5rem;
+            border-top: 1px solid rgba(88, 101, 242, 0.15);
+            text-align: center;
         }
 
         .languages-section h4 {
@@ -423,8 +449,8 @@
 
         .project-layout {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            min-height: 350px;
+            grid-template-columns: 1.2fr 1fr;
+            min-height: 420px;
         }
 
         .project-image {
@@ -435,12 +461,14 @@
             font-size: 4rem;
             position: relative;
             overflow: hidden;
+            min-height: 420px;
         }
 
         .project-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center;
         }
 
         .project-content {
@@ -667,7 +695,11 @@
             }
 
             .project-image {
-                height: 200px;
+                min-height: 250px;
+            }
+
+            .about-columns {
+                grid-template-columns: 1fr;
             }
         }
 
@@ -698,30 +730,8 @@
                 font-size: 8rem;
             }
 
-            .about-content {
-                grid-template-columns: 1fr;
-            }
-
-            .about-text h3,
-            .about-text p {
-                text-align: center;
-            }
-
-            .tech-stack h4 {
-                text-align: center;
-            }
-
             .skills-grid {
                 grid-template-columns: repeat(2, 1fr);
-            }
-
-            .experience-section h3,
-            .experience-item {
-                text-align: center;
-            }
-
-            .languages-section {
-                text-align: center;
             }
 
             .nav-links {
@@ -798,12 +808,14 @@
     <section id="about">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-            <div class="about-text">
+            <div class="about-intro">
                 <h3>Game Developer in Training</h3>
                 <p>I'm a Video Game Development student at UADE (Buenos Aires) with a strong foundation in object-oriented programming and practical experience in Unity and Unreal Engine 5.</p>
                 <p>My focus is on integrating artificial intelligence into gameplay mechanics, software design patterns, data structures, and system optimization. Currently developing a 3D game as a capstone project using Unity.</p>
                 <p>I'm looking to join a professional development team where I can contribute with my technical skills, learn from experienced developers, and grow as a game programmer.</p>
+            </div>
 
+            <div class="about-columns">
                 <div class="tech-stack">
                     <h4>🎯 Main Tech Stack</h4>
                     <div class="skills-grid">
@@ -849,28 +861,28 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="experience-section">
-                <h3>📚 Education & Experience</h3>
-                
-                <div class="experience-item">
-                    <h4>Bachelor of Science in Video Game Development</h4>
-                    <div class="company">Universidad Argentina de la Empresa (UADE)</div>
-                    <div class="date">Ongoing - Buenos Aires, Argentina</div>
-                    <p>Actively involved in programming and game design team projects. Currently developing a 3D game as a capstone project using Unity.</p>
-                </div>
+                <div class="experience-section">
+                    <h3>📚 Education & Experience</h3>
+                    
+                    <div class="experience-item">
+                        <h4>Bachelor of Science in Video Game Development</h4>
+                        <div class="company">Universidad Argentina de la Empresa (UADE)</div>
+                        <div class="date">Ongoing - Buenos Aires, Argentina</div>
+                        <p>Actively involved in programming and game design team projects. Currently developing a 3D game as a capstone project using Unity.</p>
+                    </div>
 
-                <div class="experience-item">
-                    <h4>Graphic Designer & Admin Assistant</h4>
-                    <div class="company">Photos & Puntos</div>
-                    <div class="date">Jul 2017 - Jan 2023 | Caracas, Venezuela</div>
-                    <p>Photo editing and retouching using Adobe Photoshop. Created corporate documents and promotional designs.</p>
-                </div>
+                    <div class="experience-item">
+                        <h4>Graphic Designer & Admin Assistant</h4>
+                        <div class="company">Photos & Puntos</div>
+                        <div class="date">Jul 2017 - Jan 2023 | Caracas, Venezuela</div>
+                        <p>Photo editing and retouching using Adobe Photoshop. Created corporate documents and promotional designs.</p>
+                    </div>
 
-                <div class="languages-section">
-                    <h4>🌍 Languages</h4>
-                    <p>Spanish - Native | English - B2 (Intermediate)</p>
+                    <div class="languages-section">
+                        <h4>🌍 Languages</h4>
+                        <p>Spanish - Native | English - B2 (Intermediate)</p>
+                    </div>
                 </div>
             </div>
         </div>
