--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
         <div class="about-content">
             <div class="about-intro">
                 <div class="about-photo">
-                    <img src="assets/images/profile.jpg" alt="Sebastián Barbosa">
+                    <img src="assets/images/profile.JPG" alt="Sebastián Barbosa">
                 </div>
                 <div class="about-intro-text">
                     <h3>Game Developer in Training</h3>
