--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sebastián Barbosa | Game Developer Portfolio</title>
+    <title>Sebastián Barbosa | Technical Artist & Game Developer</title>
     <style>
         * {
             margin: 0;
@@ -832,8 +832,8 @@
         <div class="hero-content">
             <div class="greeting">👋 Hi, I'm</div>
             <h1>Sebastián Barbosa</h1>
-            <div class="title">Game Developer</div>
-            <p>Passionate Video Game Development student with hands-on experience in Unity and Unreal Engine 5. Focused on gameplay programming, AI integration, and system optimization.</p>
+            <div class="title">Technical Artist & Game Developer</div>
+            <p>Video Game Development student with a hybrid profile bridging art and programming. Experienced in Unity and Unreal Engine 5, focused on visual solutions, tool development, and gameplay systems.</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View Projects 🎮</a>
                 <a href="https://github.com/Sebarbosa10" target="_blank" class="btn btn-secondary">GitHub 💻</a>
@@ -853,10 +853,10 @@
                     <img src="assets/images/profile.JPG" alt="Sebastián Barbosa">
                 </div>
                 <div class="about-intro-text">
-                    <h3>Game Developer in Training</h3>
-                    <p>I'm a Video Game Development student at UADE (Buenos Aires) with a strong foundation in object-oriented programming and practical experience in Unity and Unreal Engine 5.</p>
-                    <p>My focus is on integrating artificial intelligence into gameplay mechanics, software design patterns, data structures, and system optimization. Currently developing a 3D game as a capstone project using Unity.</p>
-                    <p>I'm looking to join a professional development team where I can contribute with my technical skills, learn from experienced developers, and grow as a game programmer.</p>
+                    <h3>Technical Artist & Game Developer</h3>
+                    <p>I'm a Video Game Development student at UADE (Buenos Aires) with a hybrid profile that bridges art and programming. I have hands-on experience in Unity and Unreal Engine 5, combining technical skills with a strong visual foundation.</p>
+                    <p>My focus is on creating optimized visual solutions, developing tools to streamline art pipelines, and integrating AI systems into gameplay. I enjoy working at the intersection of art and code, solving technical challenges that enhance the visual quality of games.</p>
+                    <p>I'm looking to join a team where I can contribute both as a Technical Artist and programmer, helping to bridge the gap between artists and developers while growing my skills in shaders, VFX, and tool development.</p>
                 </div>
             </div>
 
